tests/baselines/reference/optionalChainingInParameterInitializer.2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
optionalChainingInParameterInitializer.2.ts(3,7): error TS2373: Parameter 'b' cannot reference identifier 'a' declared after it.
optionalChainingInParameterInitializer.2.ts(6,19): error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== optionalChainingInParameterInitializer.2.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): { d: string } | undefined => undefined;
    ((b = a()?.d) => { var a; })();
          ~
!!! error TS2373: Parameter 'b' cannot reference identifier 'a' declared after it.
    
    const x = "";
    ((b = a()?.d, d = x) => { var x; })();
                      ~
!!! error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.